--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "homepage":"https://github.com/Nemanjavit/space-tourism",
   "name": "space-tourism",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "serve": "webpack serve --open --config webpack.config.js --mode development",
-    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/Nemanjavit/space-tourism/issues"
   },
-  "homepage": "https://github.com/Nemanjavit/space-tourism#readme",
+  
   "dependencies": {
     "@glidejs/glide": "^3.5.0",
     "axios": "^0.24.0",
@@ -36,6 +38,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "style-loader": "^3.3.1",
