--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "webpack serve --open --config webpack.config.js --mode development",
-    "predeploy": "npm run build",
-"deploy": "gh-pages -d build",
+    "build": "webpack --mode production --config webpack.config.js",
+    "deploy": "gh-pages -d dist",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
