added homepage to json file

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "https://nemanjavit.github.io/space-tourism",
   "name": "space-tourism",
   "version": "1.0.0",
   "description": "",
