--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "https://nemanjavit.github.io/space-tourism",
+{
+  "homepage": "https://nemanjavit.github.io/space-tourism",
   "name": "space-tourism",
   "version": "1.0.0",
   "description": "",
@@ -23,10 +24,10 @@
     "@glidejs/glide": "^3.5.0",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^5.3.0",
+    "sass": "^1.44.0",
     "sass-loader": "^12.3.0"
   },
   "devDependencies": {
